AAE-22831 Fix status is changed to 'Cancelled' when deleting process instance