@@ -15,11 +15,13 @@
  */
 package org.activiti.cloud.services.events.services;
 
-import java.util.Arrays;
+import static org.activiti.api.process.model.builders.ProcessPayloadBuilder.delete;
+
 import java.util.List;
+import java.util.Optional;
 import org.activiti.api.process.model.ProcessInstance;
+import org.activiti.api.process.runtime.ProcessAdminRuntime;
 import org.activiti.cloud.api.model.shared.events.CloudRuntimeEvent;
-import org.activiti.cloud.api.process.model.impl.CloudProcessInstanceImpl;
 import org.activiti.cloud.api.process.model.impl.events.CloudProcessDeletedEventImpl;
 import org.activiti.cloud.services.events.ProcessEngineChannels;
 import org.activiti.cloud.services.events.converter.RuntimeBundleInfoAppender;
@@ -30,19 +32,24 @@ public class CloudProcessDeletedService {
     private final ProcessEngineChannels producer;
     private final RuntimeBundleMessageBuilderFactory runtimeBundleMessageBuilderFactory;
     private final RuntimeBundleInfoAppender runtimeBundleInfoAppender;
+    private final ProcessAdminRuntime processAdminRuntime;
 
     public CloudProcessDeletedService(
         ProcessEngineChannels producer,
         RuntimeBundleMessageBuilderFactory runtimeBundleMessageBuilderFactory,
-        RuntimeBundleInfoAppender runtimeBundleInfoAppender
+        RuntimeBundleInfoAppender runtimeBundleInfoAppender,
+        ProcessAdminRuntime processAdminRuntime
     ) {
         this.producer = producer;
         this.runtimeBundleMessageBuilderFactory = runtimeBundleMessageBuilderFactory;
         this.runtimeBundleInfoAppender = runtimeBundleInfoAppender;
+        this.processAdminRuntime = processAdminRuntime;
     }
 
     public void sendDeleteEvent(String processInstanceId) {
-        sendEvent(buildProcessInstance(processInstanceId));
+        Optional
+            .ofNullable(processAdminRuntime.delete(delete().withProcessInstanceId(processInstanceId).build()))
+            .ifPresent(this::sendEvent);
     }
 
     protected void sendEvent(ProcessInstance processInstance) {
@@ -53,12 +60,6 @@ public class CloudProcessDeletedService {
 
     protected List<CloudRuntimeEvent<?, ?>> buildEvents(ProcessInstance processInstance) {
         CloudProcessDeletedEventImpl event = new CloudProcessDeletedEventImpl(processInstance);
-        return Arrays.asList(runtimeBundleInfoAppender.appendRuntimeBundleInfoTo(event));
-    }
-
-    protected ProcessInstance buildProcessInstance(String processInstanceId) {
-        CloudProcessInstanceImpl processInstance = new CloudProcessInstanceImpl();
-        processInstance.setId(processInstanceId);
-        return processInstance;
+        return List.of(runtimeBundleInfoAppender.appendRuntimeBundleInfoTo(event));
     }
 }
